--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -148,6 +148,7 @@ body {
     height: 45px;
     margin-top: 5px;
     margin-bottom: 30px;
+    padding-left: 5px;
     gap: 0px;
     border-radius: 4px;
     border: 1px solid rgba(95, 95, 95, 1);
@@ -156,6 +157,13 @@ body {
     line-height: 19.36px;
     text-align: left;
     color: rgba(95, 95, 95, 1);
+    cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url('/triangle.svg');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 13px 14px;
 }
 
 .product-name-description {
