--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -83,32 +83,10 @@ body {
     margin-left: 20px;
 }
 
-.payment-select {
-    width: 265px;
-    height: 31px;
-    border-radius: 4px;
-    text-align: left;
-    border: 1px solid rgba(95, 95, 95, 1);
-    margin-left: 80px;
-    margin-bottom: 50px;
-    padding-left: 10px;
-    cursor: pointer;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-image: url('/triangle.svg');
-    background-repeat: no-repeat;
-    background-position: right 10px center;
-    background-size: 13px 14px;
-    color: rgba(95, 95, 95, 1);
-    background-color: #f9f9f9;
-}
 
-.default-option {
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 19.36px;
-    color: rgba(95, 95, 95, 1);
-}
+
+
+
 
 .payment-select option {
     background: rgba(99, 103, 105, 1);
@@ -130,6 +108,91 @@ body {
     line-height: 14.52px;
     color: rgba(234, 234, 234, 1);
 }
+
+
+
+.custom-payment-select {
+    position: relative;
+    width: 265px;
+    height: 31px;
+    margin-top: 5px;
+    margin-bottom: 50px;
+    padding: 15px 20px 16px 15px;
+    gap: 0px;
+    border-radius: 4px;
+    border: 1px solid rgba(95, 95, 95, 1);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.36px;
+    text-align: left;
+    color: rgba(234, 234, 234, 1);
+    cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url('/storage/items/triangle.svg'); /* ▼ の画像 */
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 10px 10px;
+}
+
+.selected-option {
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 4px;
+}
+
+.dropdown-options {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: rgba(177, 177, 177, 1);
+    border: 1.5px solid rgba(177, 177, 177, 1);
+    border-top: none;
+    display: none;
+    z-index: 10;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 14.52px;
+    text-align: left;
+}
+
+.dropdown-option {
+    padding: 10px 15px;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    align-items: center;
+    background-color: rgba(177, 177, 177, 1);
+}
+
+/* ホバー時の背景色と ✓ の追加 */
+.dropdown-option:hover {
+    background: rgba(85, 153, 235, 1);
+    color: rgba(255, 255, 255, 1);
+}
+
+.dropdown-option:hover .check-icon {
+    background: url('/storage/items/check.svg') no-repeat center;
+    background-size: contain;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-right: 10px;
+}
+
+/* 選択中のアイテム */
+.dropdown-option.selected .check-icon {
+    background: url('/storage/items/check.svg') no-repeat center;
+    background-size: contain;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-right: 10px;
+}
+
+
+
+
 
 .shipping-address {
     display: block;
