--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -143,34 +143,12 @@ body {
     margin-top: 30px;
 }
 
-.condition-select {
-    width: 680px;
-    height: 45px;
-    margin-top: 5px;
-    margin-bottom: 30px;
-    padding-left: 15px;
-    gap: 0px;
-    border-radius: 4px;
-    border: 1px solid rgba(95, 95, 95, 1);
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 19.36px;
-    text-align: left;
-    color: rgba(95, 95, 95, 1);
-    cursor: pointer;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-image: url('/triangle.svg');
-    background-repeat: no-repeat;
-    background-position: right 10px center;
-    background-size: 13px 14px;
-}
 
-s/* 選択中の項目のデザイン */
-select option:hover {
-    background-color: blue; /* 背景を青にする */
-    color: white; /* 文字を白くする */
-}
+
+
+
+
+
 
 .product-name-description {
     font-size: 30px;
@@ -192,7 +170,7 @@ select option:hover {
     border-radius: 4px;
     border: 1px solid rgba(95, 95, 95, 1);
     margin-bottom: 15px;
-    padding-left: 5px;
+    padding-left: 10px;
 }
 
 .description-textarea {
@@ -201,7 +179,7 @@ select option:hover {
     gap: 0px;
     border-radius: 4px;
     border: 1px solid rgba(95, 95, 95, 1);
-    padding-left: 5px;
+    padding-left: 10px;
 }
 
 .product-price {
@@ -218,7 +196,7 @@ select option:hover {
     font-weight: 700;
     line-height: 29.05px;
     text-align: left;
-    padding-left: 7px;
+    padding-left: 10px;
     color: rgba(0, 0, 0, 1);
 }
 
@@ -244,4 +222,83 @@ select option:hover {
 }
 
 
+
+
+
+
+
+.custom-condition-select {
+    position: relative;
+    width: 680px;
+    height: 45px;
+    margin-top: 5px;
+    margin-bottom: 30px;
+    padding: 13px 20px 12px 15px;
+    gap: 0px;
+    border-radius: 4px;
+    border: 1px solid rgba(95, 95, 95, 1);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.36px;
+    text-align: left;
+    color: rgba(95, 95, 95, 1);
+    cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url('/storage/items/triangle.svg');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 10px 10px;
+}
+
+.selected-option {
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 4px;
+}
+
+.dropdown-options {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: rgba(177, 177, 177, 1);
+    border: 1.5px solid rgba(177, 177, 177, 1);
+    border-top: none;
+    display: none;
+    z-index: 10;
+}
+
+.dropdown-option {
+    padding: 10px 15px;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    align-items: center;
+    background-color: rgba(177, 177, 177, 1);
+}
+
+/* ホバー時の背景色と ✓ の追加 */
+.dropdown-option:hover {
+    background: rgba(85, 153, 235, 1);
+    color: rgba(234, 234, 234, 1);
+}
+
+.dropdown-option:hover .check-icon {
+    background: url('/storage/items/check.svg') no-repeat center;
+    background-size: contain;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-right: 10px;
+}
+
+/* 選択中のアイテム */
+.dropdown-option.selected .check-icon {
+    background: url('/storage/items/check.svg') no-repeat center;
+    background-size: contain;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-right: 10px;
+}
 
