--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -11,8 +11,10 @@ body {
     max-width: 1512px;
     margin: 30px auto;
     padding: 20px;
-    display: flex;
     gap: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .purchase-details {
@@ -208,11 +210,9 @@ body {
 }
 
 .summary-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto;
-    max-width: 612px;
+    flex: 1;
+    max-width: 450px;
+    margin-left: 20px;
 }
 
 .summary {
@@ -220,7 +220,7 @@ body {
     background: #f9f9f9;
     border: 1px solid rgba(0, 0, 0, 1);
     border-radius: 1px;
-    padding: 0px;
+    padding: 10px;
     margin-bottom: 35px;
 }
 
