--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -223,7 +223,6 @@ body {
 .summary {
     width: 440px;
     border: 1px solid rgba(0, 0, 0, 1);
-    padding: 10px;
     margin-bottom: 60px;
     margin-top: 50px;
 }
@@ -231,6 +230,8 @@ body {
 .summary-table {
     width: 100%;
     border-collapse: collapse;
+    table-layout: fixed;
+    border-spacing: 0;
 }
 
 .summary-table tr {
@@ -245,10 +246,11 @@ body {
     font-weight: 400;
     line-height: 24.2px;
     height: 115px;
+    width: 50%;
 }
 
 .summary-table tr:last-child td {
-    border-bottom: none;
+    border-bottom: none;/*支払い方法 の下に余計な線が入らないようにするため*/
 }
 
 .price {
@@ -300,7 +302,7 @@ body {
 
 @media (max-width: 850px) {
     .purchase-container {
-        flex-direction: column; /* 縦並びにする */
+        flex-direction: column;
         align-items: center;
         max-width: 90%;
     }
@@ -318,7 +320,6 @@ body {
         width: 100%;
     }
 }
-
 
 
 
