--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -74,7 +74,7 @@ body {
     color: rgba(255, 86, 85, 1);
     background-color: rgba(255, 255, 255, 1);
     border: 2px solid rgba(255, 85, 85, 1);
-    padding: 10px 20px;
+    padding: 11px 23px;
     cursor: pointer;
 }
 
@@ -82,17 +82,18 @@ body {
     background-color: rgba(255, 255, 255, 1);
 }
 
-
-
-
-
 .product-details {
+    width: 680px;
+    border-bottom: 1px solid rgba(95, 95, 95, 1);
+}
+
+.product-details h2 {
     font-size: 30px;
     font-weight: 700;
     line-height: 36.31px;
     text-align: left;
     color: rgba(95, 95, 95, 1);
-    border-bottom: 1px solid rgba(95, 95, 95, 1);
+    margin-bottom: 5px;
 }
 
 .category-group {
@@ -122,17 +123,15 @@ body {
     transition: background-color 0.3s, color 0.3s, border-color 0.3s;
 }
 
-/* マウスホバー時 */
 .category-option:hover {
     background-color: rgba(217, 217, 217, 1);
+    color: rgba(255, 86, 85, 1);
 }
 
-/* チェックボックス非表示 */
 .category-checkbox {
     display: none;
 }
 
-/* 選択された場合のデザイン（枠の色も変える） */
 .category-option.selected {
     background-color: rgba(255, 86, 85, 1);
     color: rgba(217, 217, 217, 1);
@@ -143,20 +142,92 @@ body {
     margin-top: 30px;
 }
 
+.custom-condition-select {
+    position: relative;
+    width: 680px;
+    height: 45px;
+    margin-top: 5px;
+    margin-bottom: 50px;
+    padding: 13px 20px 12px 15px;
+    gap: 0px;
+    border-radius: 4px;
+    border: 1px solid rgba(95, 95, 95, 1);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.36px;
+    text-align: left;
+    color: rgba(95, 95, 95, 1);
+    cursor: pointer;
+    background-image: url('/storage/items/triangle.svg');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 10px 10px;
+}
 
+.selected-option {
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 4px;
+}
 
+.dropdown-options {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    color: rgba(234, 234, 234, 1);
+    background-color: rgba(95, 95, 95, 1);
+    border: 1.5px solid rgba(177, 177, 177, 1);
+    border-top: none;
+    display: none;
+    z-index: 10;
+}
 
+.dropdown-option {
+    padding: 10px 15px;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    align-items: center;
+    background-color: rgba(177, 177, 177, 1);
+}
 
+.dropdown-option:hover {
+    background: rgba(85, 153, 235, 1);
+    color: rgba(234, 234, 234, 1);
+}
 
+.dropdown-option:hover .check-icon {
+    background: url('/storage/items/check.svg') no-repeat center;
+    background-size: contain;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-right: 10px;
+    color: rgba(255, 255, 255, 1);
+}
 
+.dropdown-option.selected .check-icon {
+    background: url('/storage/items/check.svg') no-repeat center;
+    background-size: contain;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-right: 10px;
+    color: rgba(255, 255, 255, 1);
+}
 
 .product-name-description {
+    border-bottom: 1px solid rgba(95, 95, 95, 1);
+    width: 680px;
+}
+
+.product-name-description h2 {
     font-size: 30px;
     font-weight: 700;
     line-height: 36.31px;
     text-align: left;
     color: rgba(95, 95, 95, 1);
-    border-bottom: 1px solid rgba(95, 95, 95, 1);
+    margin-bottom: 5px;
 }
 
 .product-name {
@@ -180,6 +251,7 @@ body {
     border-radius: 4px;
     border: 1px solid rgba(95, 95, 95, 1);
     padding-left: 10px;
+    margin-bottom: 15px;
 }
 
 .product-price {
@@ -189,7 +261,6 @@ body {
 .price-input {
     width: 680px;
     height: 45px;
-    gap: 0px;
     border-radius: 4px;
     border: 1px solid rgba(95, 95, 95, 1);
     font-size: 24px;
@@ -203,8 +274,7 @@ body {
 .submit-button {
     width: 680px;
     height: 60px;
-    gap: 0px;
-    margin-top: 60px;
+    margin-top: 65px;
     background-color: rgba(255, 85, 85, 1);
     color: rgba(255, 255, 255, 1);
     padding: 10px;
@@ -219,87 +289,6 @@ body {
 
 .submit-button:hover {
     background-color: rgba(255, 85, 85, 1);
-}
-
-
-
-
-
-
-
-.custom-condition-select {
-    position: relative;
-    width: 680px;
-    height: 45px;
-    margin-top: 5px;
-    margin-bottom: 30px;
-    padding: 13px 20px 12px 15px;
-    gap: 0px;
-    border-radius: 4px;
-    border: 1px solid rgba(95, 95, 95, 1);
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 19.36px;
-    text-align: left;
-    color: rgba(95, 95, 95, 1);
-    cursor: pointer;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-image: url('/storage/items/triangle.svg');
-    background-repeat: no-repeat;
-    background-position: right 10px center;
-    background-size: 10px 10px;
-}
-
-.selected-option {
-    background-color: rgba(255, 255, 255, 1);
-    border-radius: 4px;
-}
-
-.dropdown-options {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: rgba(177, 177, 177, 1);
-    border: 1.5px solid rgba(177, 177, 177, 1);
-    border-top: none;
-    display: none;
-    z-index: 10;
-}
-
-.dropdown-option {
-    padding: 10px 15px;
-    cursor: pointer;
-    position: relative;
-    display: flex;
-    align-items: center;
-    background-color: rgba(177, 177, 177, 1);
-}
-
-/* ホバー時の背景色と ✓ の追加 */
-.dropdown-option:hover {
-    background: rgba(85, 153, 235, 1);
-    color: rgba(234, 234, 234, 1);
-}
-
-.dropdown-option:hover .check-icon {
-    background: url('/storage/items/check.svg') no-repeat center;
-    background-size: contain;
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    margin-right: 10px;
-}
-
-/* 選択中のアイテム */
-.dropdown-option.selected .check-icon {
-    background: url('/storage/items/check.svg') no-repeat center;
-    background-size: contain;
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    margin-right: 10px;
 }
 
 .error-message {
