--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -82,6 +82,26 @@ body {
     background-color: rgba(255, 255, 255, 1);
 }
 
+.image-upload-box {
+    width: 100%;
+    height: 200px;
+    border: 2px dashed rgba(95, 95, 95, 1);
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.image-preview {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain; /* 画像を枠内に収める */
+    display: none; /* 初期状態では非表示 */
+}
+
+
 .product-details {
     width: 680px;
     border-bottom: 1px solid rgba(95, 95, 95, 1);
