--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -262,6 +262,9 @@ body {
     border: 1px solid rgba(95, 95, 95, 1);
     margin-bottom: 15px;
     padding-left: 10px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.36px;
 }
 
 .description-textarea {
@@ -272,6 +275,9 @@ body {
     border: 1px solid rgba(95, 95, 95, 1);
     padding-left: 10px;
     margin-bottom: 15px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.36px;
 }
 
 .product-price {
@@ -283,12 +289,19 @@ body {
     height: 45px;
     border-radius: 4px;
     border: 1px solid rgba(95, 95, 95, 1);
+    text-align: left;
+    padding-left: 10px;
+    padding-top: 10px;
+    color: rgba(0, 0, 0, 1);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.36px;
+}
+
+.price-input::placeholder {
     font-size: 24px;
     font-weight: 700;
     line-height: 29.05px;
-    text-align: left;
-    padding-left: 10px;
-    color: rgba(0, 0, 0, 1);
 }
 
 .submit-button {
