--- a/src/public/css/address_change.css
+++ b/src/public/css/address_change.css
@@ -79,3 +79,49 @@ body {
     font-size: 16px;
     margin-top: 2px;
 }
+
+@media screen and (max-width: 1540px) {
+    .address-change-container {
+        max-width: 90%;
+    }
+
+    .form-group input {
+        width: 100%;
+    }
+
+    .update-btn {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .address-change-container {
+        max-width: 95%;
+        padding: 15px;
+    }
+
+    .page-title {
+        font-size: 28px;
+        margin-bottom: 50px;
+    }
+
+    .form-group {
+        margin-bottom: 40px;
+        font-size: 28px;
+    }
+
+    .form-group label {
+        font-size: 20px;
+    }
+
+    .form-group input {
+        width: 100%;
+        height: 40px;
+        font-size: 14px;
+    }
+
+    .update-btn {
+        font-size: 22px;
+        height: 50px;
+    }
+}
