--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -21,25 +21,38 @@
     padding: 22px 25px 0px 0px;
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (max-width: 1540px) {
     .container {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 20px;
+        max-width: 90%;
+    }
+
+    .header__logo {
+        max-width: 320px;
+        height: 30px;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1400px) {
-    .container {
-        max-width: 900px;
-        margin: 0 auto;
+@media screen and (max-width: 850px) {
+    .header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
         padding: 15px;
     }
-}
 
-@media screen and (max-width: 768px) {
+    .header__logo {
+        max-width: 250px;
+        height: auto;
+        margin-bottom: 10px;
+    }
+
     .container {
-        max-width: 100%;
+        width: 90%;
+        padding: 10px;
+    }
+
+    main {
+        width: 100%;
         padding: 10px;
     }
 }
