--- a/src/public/css/edit.css
+++ b/src/public/css/edit.css
@@ -171,20 +171,51 @@ form {
     background-color: rgba(255, 85, 85, 1);
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 1540px) {
     .profile-edit-container {
-        padding: 15px;
-    }
-
-    .form-group label {
-        font-size: 13px;
+        max-width: 90%;
     }
 
     .form-group input {
-        font-size: 13px;
+        width: 90%;
+        font-size: 22px;
     }
 
     .btn-submit {
-        font-size: 14px;
+        width: 90%;
+        font-size: 26px;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .profile-edit-container {
+        max-width: 95%;
+        text-align: center;
+    }
+
+    .profile-image-section {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .form-group label {
+        font-size: 20px;
+    }
+
+    .form-group input {
+        width: 100%;
+        height: 45px;
+        font-size: 18px;
+    }
+
+    .btn-select-image {
+        font-size: 18px;
+        padding: 8px 12px;
+    }
+
+    .btn-submit {
+        width: 100%;
+        font-size: 22px;
+        padding: 12px;
     }
 }
