--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -109,27 +109,46 @@ body {
 
 @media screen and (max-width: 1540px) {
     .login-container {
-        margin: 50px auto;
+        max-width: 90%;
+    }
+
+    .input-text {
+        max-width: 600px;
     }
 
     .btn-submit {
-        font-size: 22px;
-        height: 60px;
+        max-width: 600px;
     }
 }
 
 @media screen and (max-width: 850px) {
+    .login-container {
+        width: 90%;
+        max-width: 600px;
+        padding: 15px;
+    }
+
     .login-container h2 {
-        font-size: 30px;
+        font-size: 28px;
     }
 
     .form-group label {
         font-size: 20px;
     }
 
-    .input-text,
+    .input-text {
+        width: 100%;
+        height: 50px;
+        font-size: 16px;
+    }
+
     .btn-submit {
         width: 100%;
+        height: 55px;
+        font-size: 22px;
+    }
+
+    .login-container p a {
+        font-size: 18px;
     }
 }
-
