--- a/src/public/css/payment.css
+++ b/src/public/css/payment.css
@@ -112,3 +112,26 @@ h1 {
 .back-btn:hover {
     background-color: rgba(217, 217, 217, 1);
 }
+
+@media screen and (max-width: 1540px) {
+    .payment-container {
+        max-width: 90%;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .payment-container {
+        max-width: 95%;
+        padding: 15px;
+    }
+
+    .item-image {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .payment-btn, .back-btn {
+        width: 100%;
+        max-width: 350px;
+    }
+}
