--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -104,28 +104,48 @@ body {
     text-decoration: underline;
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (max-width: 1540px) {
     .register-container {
-        max-width: 800px;
-        padding: 40px;
+        max-width: 90%;
     }
+
+    .input-text {
+        max-width: 600px;
+    }
+
     .btn-submit {
-        font-size: 28px;
-        height: 70px;
+        max-width: 600px;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1400px) {
+@media screen and (max-width: 850px) {
     .register-container {
-        max-width: 680px;
-        padding: 20px;
+        width: 90%;
+        max-width: 600px;
+        padding: 15px;
     }
-    .btn-submit {
-        font-size: 22px;
-        height: 60px;
+
+    .register-container h2 {
+        font-size: 28px;
     }
+
     .form-group label {
         font-size: 20px;
     }
-}
 
+    .input-text {
+        width: 100%;
+        height: 50px;
+        font-size: 16px;
+    }
+
+    .btn-submit {
+        width: 100%;
+        height: 55px;
+        font-size: 22px;
+    }
+
+    .register-container p a {
+        font-size: 18px;
+    }
+}
