--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -329,3 +329,32 @@ body {
     font-size: 14px;
     margin-top: 10px;
 }
+
+@media screen and (max-width: 1540px) {
+    .sell-container {
+        max-width: 90%;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .sell-container {
+        max-width: 95%;
+        padding: 15px;
+    }
+
+    .form-group {
+        width: 100%;
+    }
+
+    .image-upload-box {
+        width: 100%;
+    }
+
+    .name-input, .description-textarea, .price-input {
+        width: 100%;
+    }
+
+    .submit-button {
+        width: 100%;
+    }
+}
