--- a/src/public/css/show.css
+++ b/src/public/css/show.css
@@ -193,4 +193,66 @@ body {
     border-radius: 4px;
 }
 
+@media screen and (max-width: 1540px) {
+    .profile-container {
+        max-width: 90%;
+    }
+}
 
+@media screen and (max-width: 850px) {
+    .profile-header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .profile-image {
+        width: 120px;
+        height: 120px;
+        margin-left: 0;
+    }
+
+    .profile-info h2 {
+        font-size: 28px;
+        text-align: center;
+        margin-left: 0;
+    }
+
+    .profile-btn {
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .profile-btn .btn {
+        width: 250px;
+        font-size: 20px;
+    }
+
+    .tabs {
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .tabs a {
+        font-size: 20px;
+        margin: 0 15px;
+    }
+
+    .items {
+        justify-content: center;
+    }
+
+    .item {
+        width: 200px;
+        height: auto;
+    }
+
+    .product-image img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .item p {
+        font-size: 18px;
+    }
+}
