--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -15,47 +15,34 @@
 
 .container {
     background-color: rgba(0, 0, 0, 1);
-    width: 1515px;
+    width: 100%;
+    max-width: 1540px;
+    min-width: 1400px;
     height: 82px;
     gap: 0px;
     padding: 22px 25px 0px 0px;
-}
-
-@media screen and (max-width: 1540px) {
-    .container {
-        max-width: 90%;
-    }
-
-    .header__logo {
-        max-width: 320px;
-        height: 30px;
-    }
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 850px) {
+    .container {
+        max-width: 95%;
+        padding: 10px;
+    }
+
     .header {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 15px;
+        padding: 10px;
+        justify-content: space-between;
     }
 
     .header__logo {
         max-width: 250px;
-        height: auto;
-        margin-bottom: 10px;
-    }
-
-    .container {
-        width: 90%;
-        padding: 10px;
-    }
-
-    main {
-        width: 100%;
-        padding: 10px;
     }
 }
 
-
-
+@media screen and (max-width: 1540px) {
+    .container {
+        max-width: 95%;
+        padding: 10px;
+    }
+}
