--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -104,48 +104,23 @@ body {
     text-decoration: underline;
 }
 
-@media screen and (max-width: 1540px) {
-    .register-container {
-        max-width: 90%;
-    }
-
-    .input-text {
-        max-width: 600px;
-    }
-
-    .btn-submit {
-        max-width: 600px;
-    }
-}
-
 @media screen and (max-width: 850px) {
     .register-container {
-        width: 90%;
-        max-width: 600px;
+        max-width: 90%;
         padding: 15px;
     }
 
-    .register-container h2 {
-        font-size: 28px;
+    .input-text, .btn-submit {
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 1540px) {
+    .register-container {
+        max-width: 600px;
     }
 
-    .form-group label {
-        font-size: 20px;
-    }
-
-    .input-text {
-        width: 100%;
-        height: 50px;
-        font-size: 16px;
-    }
-
-    .btn-submit {
-        width: 100%;
-        height: 55px;
-        font-size: 22px;
-    }
-
-    .register-container p a {
-        font-size: 18px;
+    .input-text, .btn-submit {
+        max-width: 95%;
     }
 }
