--- a/src/public/css/verify-email.css
+++ b/src/public/css/verify-email.css
@@ -48,20 +48,15 @@ body {
     background-color: #0056b3;
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (max-width: 850px) {
     .verify-email-container {
-        max-width: 700px;
-        padding: 40px;
+        max-width: 90%;
+        padding: 15px;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1400px) {
+@media screen and (max-width: 1540px) {
     .verify-email-container {
-        max-width: 600px;
-        padding: 20px;
-    }
-    .resend-button {
-        font-size: 18px;
+        max-width: 550px;
     }
 }
-
