--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -8,6 +8,8 @@ body {
     padding: 20px;
     margin: 0 auto;
     width: 100%;
+    max-width: 1540px;
+    min-width: 1400px;
     font-family: Inter;
     background: rgba(255, 255, 255, 1);
 }
@@ -22,7 +24,6 @@ body {
     text-align: right;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    max-width: 1515px;
     height: 90px;
 }
 
@@ -53,7 +54,8 @@ body {
     overflow: hidden;
     text-align: center;
     border-radius: 4px;
-    width: 290px;
+    width: 100%;
+    max-width: 290px;
     height: 320px;
     gap: 0px;
     margin-left: 30px;
@@ -126,11 +128,11 @@ a:hover {
 
 @media screen and (max-width: 1540px) {
     .product-container {
-        max-width: 90%;
+        max-width: 100%;
     }
 
     .product-tabs {
-        max-width: 1400px;
+        max-width: 1540px;
     }
 
     .product-grid {
@@ -140,42 +142,10 @@ a:hover {
 
 @media screen and (max-width: 850px) {
     .product-container {
-        max-width: 95%;
-        padding: 15px;
-    }
-
-    .product-tabs {
-        flex-direction: row;
-        justify-content: center;
-        font-size: 20px;
-    }
-
-    .tab {
-        margin-left: 30px;
+        max-width: 90%;
     }
 
     .product-grid {
         grid-template-columns: repeat(2, 1fr);
-        gap: 10px;
-    }
-
-    .product-card {
-        width: 100%;
-        height: auto;
-        margin: 0 auto;
-    }
-
-    .product-image img {
-        width: 100%;
-        height: auto;
-    }
-
-    .sold-badge {
-        font-size: 12px;
-        padding: 3px 6px;
-    }
-
-    .product-name {
-        font-size: 20px;
     }
 }
