--- a/src/public/css/verify-email.css
+++ b/src/public/css/verify-email.css
@@ -1,21 +1,22 @@
 body {
     font-family: Inter;
-    background-color: #f9f9f9;
+    background-color: rgba(255, 255, 255, 1);
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     height: 100vh;
 }
 
 .verify-email-container {
-    max-width: 600px;
+    width: 100%;
+    max-width: 1540px;
+    margin-top: 50px;
     padding: 20px;
-    background-color: #ffffff;
-    border: 1px solid #e0e0e0;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
 }
 
@@ -57,6 +58,6 @@ body {
 
 @media screen and (max-width: 1540px) {
     .verify-email-container {
-        max-width: 550px;
+        max-width: 100%;
     }
 }
