--- a/src/public/css/address_change.css
+++ b/src/public/css/address_change.css
@@ -83,37 +83,26 @@ body {
     margin-top: 2px;
 }
 
-@media screen and (max-width: 1540px) {
+@media (min-width: 768px) and (max-width: 850px) {
     .address-change-container {
-        width: 90%;
-        max-width: 680px;
+        padding: 10px;
+    }
+
+    .form-group label {
+        font-size: 20px;
     }
 
     .form-group input {
-        width: 90%;
-        max-width: 680px;
-    }
-        .update-btn {
-        width: 90%;
-        max-width: 680px;
-    }
-}
-
-@media screen and (max-width: 850px) {
-    .address-change-container {
-        width: 95%;
-        max-width: 100%;
-    }
-
-    .form-group input {
-        width: 100%;
-        max-width: none;
+        font-size: 14px;
+        height: 40px;
     }
 
     .update-btn {
-        width: 100%;
-        max-width: none;
+        font-size: 22px;
+        height: 50px;
     }
+
 }
+
 
 
