--- a/src/public/css/payment.css
+++ b/src/public/css/payment.css
@@ -114,15 +114,23 @@ h1 {
     background-color: rgba(217, 217, 217, 1);
 }
 
-@media screen and (max-width: 1540px) {
-    .payment-container {
-        max-width: 100%;
+@media (min-width: 768px) and (max-width: 850px) {
+    h1 {
+        font-size: 28px;
+        line-height: 36px;
     }
-}
 
-@media screen and (max-width: 850px) {
-    .payment-container {
-        max-width: 95%;
-        padding: 15px;
+    .item-details h2 {
+        font-size: 24px;
+    }
+
+    .item-price-value {
+        font-size: 26px;
+    }
+
+    .payment-btn,
+    .back-btn {
+        font-size: 16px;
+        height: 48px;
     }
 }
