--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -104,23 +104,26 @@ body {
     text-decoration: underline;
 }
 
-@media screen and (max-width: 850px) {
+@media (min-width: 768px) and (max-width: 850px) {
     .register-container {
-        max-width: 90%;
-        padding: 15px;
+        margin: 40px auto;
+        padding: 10px;
     }
 
-    .input-text, .btn-submit {
-        max-width: 100%;
-    }
-}
-
-@media screen and (max-width: 1540px) {
-    .register-container {
-        max-width: 600px;
+    .register-container h2 {
+        font-size: 28px;
     }
 
-    .input-text, .btn-submit {
-        max-width: 95%;
+    .form-group label {
+        font-size: 20px;
+    }
+
+    .btn-submit {
+        font-size: 22px;
+        height: 55px;
+    }
+
+    .register-container p a {
+        font-size: 18px;
     }
 }
